# rss-combiner

./: .gitignore  Cargo.toml  Dockerfile  READE.md
.cargo/: config.toml
.github/workflows/: rust.yml
.sqlx/: query-3ad2e3dee507c0eb9c1c91b9930bbc922336fcc815b4364b5e7c37ebfb5ec8d7.json  query-5266609630c84b81e33499be2139d61869e90cdc95d6907a83c995b5b09e1dbf.json  query-9101ab94b0cd5439348570d4cfca7b43767f774ab59716c59ff266e84585b37b.json  query-9294976687071df8e639d9a3b0294a096d94fff0e8614c55f699586049c08886.json
migrations/: 20250830012319_init.sql
src/: api.rs  db.rs  main.rs  test-feed.xml
