[package]
name = "rss-combiner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["default", "http2", "macros"] }
bytes = "1.10.1"
lazy_static = "1.5.0"
mockito = "1.7.0"
moka = { version = "0.12.11", features = ["default", "future"] }
rand = "0.10.0-rc.0"
reqwest = "0.12.24"
rss = "2.0.12"
sentry = { version = "0.45.0", features = ["anyhow", "default", "logs", "tracing", "tower", "tower-axum-matched-path", "tower-http"] }
sqlx = { version = "0.8.6", features = [ "chrono", "postgres", "runtime-tokio" ] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }

[profile.release]
lto = "thin"