cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "rss-combiner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["default", "http2", "macros"] }
bytes = "1.11.0"
lazy_static = "1.5.0"
mockito = "1.7.1"
moka = { version = "0.12.12", features = ["default", "future"] }
rand = "0.10.0-rc.6"
reqwest = "0.12.28"
rss = "2.0.12"
sentry = { version = "0.46.1", features = ["anyhow", "default", "logs", "tracing", "tower", "tower-axum-matched-path", "tower-http"] }
sqlx = { version = "0.8.6", features = [ "chrono", "postgres", "runtime-tokio" ] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "time"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
codegen-backend = "cranelift"
