cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "rss-combiner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["default", "http2", "macros"] }
bytes = "1.12.1"
lazy_static = "1.5.0"
mockito = "1.7.2"
moka = { version = "0.12.15", features = ["default", "future"] }
rand = "0.10.2"
reqwest = "0.13.4"
rss = "2.1.0"
sentry = { version = "0.48.4", features = ["anyhow", "default", "logs", "tracing", "tower", "tower-axum-matched-path", "tower-http"] }
sqlx = { version = "0.9.0", features = [ "chrono", "postgres", "runtime-tokio" ] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "time"] }
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
#codegen-backend = "cranelift"
